--- a/css/common.css
+++ b/css/common.css
@@ -2,7 +2,7 @@
 a{text-decoration:none;}
 
 body {
-    font: 14px/100%  'Microsft YaHei',arial,"Hiragino Sans GB","Hiragino Sans GB W3";
+    font: 14px/100%  Arial,'Microsoft YaHei','微软雅黑','Microsft YaHei',arial,"Hiragino Sans GB","Hiragino Sans GB W3";
     _zoom: 1;
 }
 
@@ -10,7 +10,7 @@ body {
 
 div,p,span,img{}
 
-.fixedWidth{max-width:1200px; min-width: 800px;}
+.fixedWidth{width:1200px; min-width: 800px;}
 
 .clear{clear:both;}
 
@@ -23,12 +23,12 @@ div,p,span,img{}
 /*头部*/
 .LogoT{
 	margin:auto;
-	padding:0.8rem 0 !important;
+	padding-top:2%;
+	padding-bottom: 1%;
 }
 
 .navTop{
 	background-color:#323232;
-	height:3rem;
 	color:#fff;
 	margin:auto;
 }
@@ -36,7 +36,7 @@ div,p,span,img{}
 /*左侧Logo*/
 .LogoLeft{
 	display: inline-block;
-	margin-left:5%;
+	margin-left:7%;
 }
 
 .TopLogoD{
@@ -44,7 +44,7 @@ div,p,span,img{}
 }
 
 .Toplogo{
-	max-width: 180px;
+	width: 212px;
 }
 
 .TopLogoLine{
@@ -61,23 +61,29 @@ div,p,span,img{}
 }
 
 .TopLogoFirst{
-	font-size:1.4rem;
-	font-weight: bold;
+	font-size:18px;
+	line-height: 18px;
+	font-weight: bold;	
+	color:#323232;
+	letter-spacing: 6px;
 }
 
 .TopLogoSecond{
 	margin-top:3%;
 	font-weight: bold;
 	letter-spacing: 0.08rem;
-	font-size:1rem;
+	font-size:14px;
+	line-height: 14px;	
+	color:#323232;
 }
 
 .TopPhoneRight{
 	display: inline-block;
-	margin-left: 36%;
+	margin-left: 20%;
 }
 
 .TopPhoneD{	
+	vertical-align: top;
 }
 
 .TopPhoneNumD{
@@ -85,20 +91,24 @@ div,p,span,img{}
 }
 
 .TopPhoneLogo{
-	max-width: 38px;
+	width: 48px;
 }
-
 .TopPhoneTitle{
 	font-weight: bold;
+	font-size: 16px;
+	line-height: 16px;
+	margin-left:8px;
+	color:#323232;
 }
 
 .TopPhone{
 	background-color:#ec6c00;
-	border-radius: 1rem;
+	border-radius: 30px;
 	color:#fff;
 	font-weight: bold;
-	font-size: 1.2rem;
-	padding:0.5rem !important;
+	font-size: 28px;
+	line-height: 32px;
+	padding:4px 20px  !important;
 	margin-top:2%;
 }
 
@@ -107,6 +117,7 @@ div,p,span,img{}
 	margin:auto;
 	text-align: center;
 	list-style: none;
+	height:39px;
 }
 
 .nvavTopUl li{
@@ -118,11 +129,11 @@ div,p,span,img{}
 .TopABtn{
 	color:#fff;
 	width:100%;
-	height: 3rem;
+	font-size:16px;
+	height: 39px;
 	text-align: center;
-	line-height: 3rem;
-	display: block;
-	font-weight: bold;
+	line-height: 39px;
+	padding:11px 40px;
 }
 
 a.TopABtn:hover{
