--- a/css/our.css
+++ b/css/our.css
@@ -121,7 +121,7 @@ html,body{
 
 .gapFirstT{
 	color:#fff;
-	font-size: 62px;
+	font-size: 60px;
 	line-height: 70px;
 	font-weight: bold;
 	letter-spacing: 1rem;
@@ -139,18 +139,31 @@ html,body{
 .gapSecondUl{	
 	list-style: none;
 	margin:auto;
-	display: flex;
-	justify-content: space-around;
 	height: 3rem;
-	align-items: center;
+	text-align: center;
 	background-color: #fff;
+	line-height: 3rem;
+}
+
+.gapSecondli{
+	display: inline-block;
+	vertical-align: middle;
 }
 
 .gapSecondText{
 	color:#db4e1d;
 	line-height: 40px;
-	font-size:32px;
+	font-size:31px;
 	font-weight: bold;
+	padding:2px 0 ;
+}
+
+.gapLineLitTextSpace1{
+	margin: 0 27px;	
+}
+
+.gapLineLitTextSpace2{
+	margin: 0 54px;	
 }
 
 
@@ -182,9 +195,7 @@ html,body{
 .threeContentD{
 	margin:auto;
 	margin-top:3%;
-	display: flex;
 	width:65%;
-	justify-content: space-between;
 }
 
 .threeItemText{
@@ -206,7 +217,7 @@ html,body{
 }
 
 .gapS2{
-	max-width:658px;
+	width:638px;
 }
 
 .gapT3{	
@@ -215,7 +226,7 @@ html,body{
 }
 
 .gapS3{
-	max-width:935px;
+	width:908px;
 }
 
 /*------------先行者---------------*/
@@ -290,12 +301,24 @@ html,body{
 	width:1464px;
 }
 
+.videoEleCon{
+	position: absolute;
+    top: -132px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    width: 844px;
+    height: 528px;
+}
+
 .boxImgItem{
 	width:197px;
 	height:96px;
 	margin:0 4px;	
 	float:left;		
 }
+
 
 .foregoerItemConLeftCon,.foregoerItemConLeftCon{
 	display: inline-block;
@@ -434,13 +457,23 @@ html,body{
 	background: #f8d59b;
 }
 
+.gapSecondTOtherMidText{
+	margin: 0 44px;
+	letter-spacing: 6px;
+}
+
+
+.gapZhenDuanMidText{
+	margin: 0 50px;	
+}
+
 .gapSecondUlOther{
 
 	list-style: none;
 	margin:auto;
-	display: flex;
-	justify-content: space-around;
-	height: 5rem;
+	height: 6.4rem;
+	line-height: 6.4rem;
+	text-align: center;
 	align-items: center;
 	background-color: #f8d59b;
 }
@@ -667,13 +700,20 @@ html,body{
 
 .gapT4{
 	text-indent: 0;
+	font-size:47px !important;
+	line-height: 50px !important;
 	letter-spacing: 0.05rem;
 
 }
 
+.gapSubLiMidP4{
+	font-size:29px !important;
+	line-height: 30px;
+}
+
 .gapS4
 {
-	max-width:940px;
+	max-width:	817px;
 }
 
 /*-----诊断-----*/
@@ -688,7 +728,7 @@ html,body{
 
 .judgeFourItem{
 	display: inline-block;
-	margin-right: 0.5rem;
+	margin: 0 0.5rem;
 	width:230px;
 	height: 290px;
 	vertical-align: top;
@@ -800,6 +840,11 @@ html,body{
 
 /*----------公开课--------------*/
 
+.coachmidGapText{
+	margin:0 40px;
+	letter-spacing: 8px;
+}
+
 .publicCourseOuterCon{
 	background-color:#f3f6fb;
 	width:100%;
@@ -808,12 +853,12 @@ html,body{
 
 .publicTextCon{
 	text-align: center;
+	display: inline-block;
 	margin-left:10%;
 }
 
 .publicCourseCon{
-	display: flex;
-	justify-content: center;
+	text-align: center;
 	margin:auto;
 }
 
@@ -845,7 +890,7 @@ html,body{
 }
 
 .publicImgCon{
-
+	display: inline-block;
 }
 
 .publicImg{
@@ -898,7 +943,9 @@ html,body{
 }
 
 .reportLeftCon{
+	vertical-align: top;
 	margin-right: 85px;
+	display: inline-block;
 }
 
 .reportCon{
@@ -921,7 +968,7 @@ html,body{
 	left:0;
 	right: 0;
 	bottom: 0;
-	width: 60%;
+	width: 77%;
 	text-align: center;
 	margin:auto;
 }
@@ -938,8 +985,8 @@ html,body{
 	bottom:0;
 	margin:auto;
 	color:#fff;
-	font-size:30px;
-	line-height: 34px;
+	font-size:44px;
+	line-height: 48px;
 	font-weight:bold;
 }
 
@@ -950,9 +997,8 @@ html,body{
 .reportContextCon{
 	margin:auto;
 	width:100%;
-	margin-top:8%;
-	display: flex;
-	justify-content: center;
+	margin-top:10%;
+	text-align: center;
 	margin-bottom: 2%;
 	color:#f35e28;
 }
@@ -980,6 +1026,7 @@ html,body{
 
 .reportRightCon{
 	margin-left:5%;
+	display: inline-block;
 	text-align: left;
 }
 
