--- a/css/broken.css
+++ b/css/broken.css
@@ -218,7 +218,7 @@
 .taskItemContentT{
 	color:#feeb68;
 	font-size: 28px;
-	line-height: 30px;
+	line-height: 34px;
 	font-weight: bold;
 	text-align: left;
 	padding:1% 0;
@@ -582,13 +582,21 @@
 	color: #feeb68;
 }
 
-.teacherGapTextS:after{
+.specialGapTextS:after{
 	content:'」';
 	font-size: 2.4rem;
 	color:#feeb68;
 	line-height: 2rem;
 	vertical-align: bottom;
 }
+
+/*.teacherGapTextS:after{
+	content:'」';
+	font-size: 2.4rem;
+	color:#feeb68;
+	line-height: 2rem;
+	vertical-align: bottom;
+}*/
 
 /*------------------------讲师----------------------*/
 .teacherOuterCon{
@@ -698,6 +706,28 @@
 	text-align: center;
 }
 
+.teacherCoachItemImgCon{
+	position: relative;
+	width: 160px;
+	height: 160px;
+	overflow: hidden;
+	border-radius: 50%;
+}
+
+.teacherCoachItemImgShadow{
+	background-color: #000;
+	opacity: 0.7;
+	filter:alpha(opacity=70);
+	position: absolute;
+	top:0;
+	left:0;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	display: none;
+}
+
 /*.teacherCoachItemImgCon{
 	position: relative;
 	width: 160px;
@@ -724,10 +754,14 @@
 	vertical-align: top;	
 }
 
-.teacherCoachItem:hover .teacherCoachItemImg{
+.teacherCoachItem:hover{
+	cursor: pointer;
+}
+
+/*.teacherCoachItem:hover .teacherCoachItemImg{
 	transform: rotateY(360deg);
 	transition:all 1s ease;
-}
+}*/
 
 .teacherCoachItemImg{
 	max-width: 160px;
@@ -741,6 +775,7 @@
 	font-weight: bold;	
 	color: #feeb68;
 	margin-bottom: 4px;
+	margin-top:8px;
 }
 
 .teacherCoachIntro{
