--- a/css/common.css
+++ b/css/common.css
@@ -6,6 +6,36 @@ body {
     _zoom: 1;
 }
 
+.gotoKefuBtn{
+	cursor: pointer;
+}
+
+/*回顶部*/
+.m-TD{
+	position: fixed;
+	right:10%;
+	bottom:10%;
+	z-index: 120;
+	opacity: 0.7;
+	filter: alpha(opacity=70);
+}
+
+.m-TD ul{
+	list-style: none;
+}
+
+.m-TD ul li{
+	margin-top:10px;
+}
+
+.m-TD ul li a{
+	padding:8px 20px;
+	display: block;
+	background-color:#ff4600;
+	color:#fff;
+	border:2px solid #fff;
+}
+
 
 
 div,p,span,img{}
