--- a/css/our.css
+++ b/css/our.css
@@ -473,7 +473,6 @@ html,body{
     font-weight: bold;
     letter-spacing: 6px;
     padding-top: 3.6rem;
-    text-indent: 0.8rem;
 }
 
 .gapSecondTOther{
@@ -588,7 +587,8 @@ html,body{
 .CoachItem{
 	display: inline-block;
 	overflow: hidden;
-	margin-right: 2.5rem;
+	margin-right:1rem;
+	margin-left:1rem;
 	position: relative;
 }
 
@@ -658,7 +658,7 @@ html,body{
 }
 
 .BrandCon{
-	width:995px;
+	width:1000px;
 	margin:auto;
 	padding-left: 17px;
 }
@@ -666,7 +666,8 @@ html,body{
 .brandItemImg{
 	float:left;
 	display: block;
-	margin-right: 4px;
+	margin-right: 2px;
+	margin-left:2px;
 	margin-top:6px;
 	/*border:1px solid #ccc;*/
 }
@@ -1122,4 +1123,9 @@ html,body{
 .QcodeBtnCon{
 	margin:auto;
 	margin-top:20px;
+}
+
+.CoachItemImg{
+	width: 100%;
+	height: 100%;
 }
